Checking in updated notebook

--- a/Kiva - Capstone.ipynb
+++ b/Kiva - Capstone.ipynb
@@ -9,11 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/envs/dsi/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "//anaconda/envs/dsi/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Importing all of the libraries that will be used below.\n",
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1772,17 +1783,49 @@
     "# Conclusions and Follow Ups\n",
     "\n",
     "* It is clear that having a high dollar loan, posting your loan during times of high supply, and having a longer loan repayment term all make it more difficult to get a loan funded on Kiva\n",
-    "* On the other side lenders have a preference for loans that are: from women, with multiple borrowers, from countries with higher gross national income per capita, and that alreay have more lenders assigned. \n",
+    "* On the other side lenders have a preference for loans that are: from women, with multiple borrowers, from countries with higher gross national income per capita, and that already have more lenders assigned. \n",
     "* The model picked up the fact that there are large disparities between genders within countries as the interaction between country/gender for both Paraguay and Peru were some of the stronger coeffecients. \n",
     "* The headline text analysis picked up many of the words associated with agriculture. In particular loans that are associated with hybrid seed fertilizer are especially prone to going unfunded. \n",
     "* The topic modeling did not add much to the model. Only 2 of the topics did not get totally whacked by the regularization. These two topics appear to be associated with service related positions. \n",
+    "\n",
     "\n",
     "In order to help improve and tune the model a few things that I would consider exploring are:\n",
     "* Including field partner data. It's possible that certain field partners have a better sense of what loans are in high demand and this could help to improve the model.\n",
     "* Fine tune the LDA model more. As I was sampling and testing data I noticed the topic importance change quite a bit over each iteration. I would look to train the LDA model over a larger sample size and include more topics. This could help to differentiate between loans better. \n",
     "* As the old saying goes a picture is worth a thousand words. It would be interesting to explore doing image sentiment analysis to see if that could improve the model. \n",
-    "* Kiva also has groups that lenders can belong to. It would be intersting to see some social network analysis to see if certain groups are more succesfull at driving up lending rates and if they tend to lend to the same loans. \n",
+    "* Kiva also has groups that lenders can belong to. It would be interesting to see some social network analysis to see if certain groups are more sucessfull at driving up lending rates and if they tend to lend to the same loans. \n",
     "* The data set was large enough that it got pretty unwieldy to run on my laptop. Could have been worthwhile to spin up on AWS and explore using Spark to see if could get any better performance, or at the very least let it run on it's own without tying up my laptop. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels\n",
+    "print statsmodels.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print 5"
    ]
   }
  ],
@@ -1792,18 +1835,6 @@
    "display_name": "Python [dsi]",
    "language": "python",
    "name": "Python [dsi]"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
   }
  },
  "nbformat": 4,
